--- a/Articulo.html
+++ b/Articulo.html
@@ -60,10 +60,10 @@
         <div class="col s12">
             <div class="card flow-text">
                 <div class="card-tabs">
-                    <ul class="tabs tabs-fixed-width black-text">
-                        <li class="tab" onclick="background-color:#f56e7c;"><a href="#Sintomas">Síntomas</a></li>
-                        <li class="tab"><a href="#Ejercicios">Ejercicios</a></li>
-                        <li class="tab"><a href="#Otros">Otros</a></li>
+                    <ul class="tabs tabs-fixed-width">
+                        <li class="tab red lighten-4" ><a href="#Sintomas" class="black-text">Síntomas</a></li>
+                        <li class="tab red lighten-4"><a href="#Ejercicios" class="black-text">Ejercicios</a></li>
+                        <li class="tab red lighten-4"><a href="#Otros" class="black-text">Otros</a></li>
                     </ul>
                     <!--active es el que se va a ver al principio. Si no se pone un active, por default el primero va a ser el que se vea-->
                 </div>
