--- a/Instrucciones.html
+++ b/Instrucciones.html
@@ -28,14 +28,14 @@
                         <i class="material-icons">menu</i>
                     </a>
                     <ul class="right hide-on-med-and-down">
-                        <li><a href="/Instrucciones.html">Instrucciones</a></li>
+                        <li><a href="/Editor.html">Volver a Admin</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </div>
     <ul class="sidenav" id="mobile-nav">
-        <li><a href="/Instrucciones.html">Instrucciones</a></li>
+        <li><a href="/Editor.html">Volver a Admin</a></li>
     </ul>
 
 <!--Editar/Crear-->
