--- a/Editor.html
+++ b/Editor.html
@@ -13,14 +13,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<!--
-    TENGO QUE ARREGLAS LAS H1-6 PARA QUE TENGAN EL TAMAÑO CORRECTO, Y CAMBIARLES
-    EL PADDING PARA QUE NO ESTÉN TAN SEPARADOS LOS TEXTOS ENTRE SÍ. 
--->
 <body id="inicio">
     <!--NavBar-->
     <div class="navbar-fixed">
-        <nav class="teal lighten-3">
+        <nav class="teal">
             <div class="container">
                 <div class="nav-wrapper">
                     <a href="#" class="brand-logo">NOMBRE</a>
