--- a/Articulo.html
+++ b/Articulo.html
@@ -38,21 +38,7 @@
         <li><a href="/Principal.html">Volver a la Página Principal</a></li>
     </ul>
 
-<!--Buscar--><!--
-<section id="buscar" class="section section-buscar teal lighten-1 white-text center scrollspy">
-    <div class="container center">
-        <div class="row">
-            <div class="col s12">
-                <h3>Buscar Padecimientos</h3>
-                <div class="input-field center">
-                    <input type="text" class="white grey-text autocomplete" id="autocomplete-input" placeholder="Ansiedad, depreción, etc...">
-                </div>
-            </div>
-        </div>
-    </div>
-    </section>
--->
-
+<!--Artículo-->
 <section id="articulo" class="section section-articulo">
     <div class="container">
         <h2 class="text center">Nombre Padecimiento</h2>
@@ -61,13 +47,13 @@
             <div class="card flow-text">
                 <div class="card-tabs">
                     <ul class="tabs tabs-fixed-width">
-                        <li class="tab red lighten-4" ><a href="#Sintomas" class="black-text">Síntomas</a></li>
-                        <li class="tab red lighten-4"><a href="#Ejercicios" class="black-text">Ejercicios</a></li>
-                        <li class="tab red lighten-4"><a href="#Otros" class="black-text">Otros</a></li>
+                        <li class="tab red lighten-3" ><a href="#Sintomas" class="black-text">Síntomas</a></li>
+                        <li class="tab red lighten-3"><a href="#Ejercicios" class="black-text">Ejercicios</a></li>
+                        <li class="tab red lighten-3"><a href="#Otros" class="black-text">Otros</a></li>
                     </ul>
                     <!--active es el que se va a ver al principio. Si no se pone un active, por default el primero va a ser el que se vea-->
                 </div>
-                <div class="card-content teal lighten-3">
+                <div class="card-content teal lighten-4">
                     <div id="Sintomas">
                         Síntomas
                         <p>Sintomaskfnaepbnpr Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur deleniti repellendus laboriosam ratione molestias sint voluptatem porro quaerat et expedita adipisci asperiores iure rem doloremque dolores a, ad consequuntur quibusdam fugiat fugit eaque blanditiis! Architecto harum ut quaerat iure dolorem.
