--- a/Editor.html
+++ b/Editor.html
@@ -43,11 +43,11 @@
             <div class="card flow-text">
                 <div class="card-tabs">
                     <ul class="tabs tabs-fixed-width">
-                        <li class="tab red lighten-4" ><a href="#Crear" class="black-text">Crear</a></li>
-                        <li class="tab red lighten-4"><a href="#Editar" class="black-text">Editar</a></li>
+                        <li class="tab red lighten-3" ><a href="#Crear" class="black-text">Crear</a></li>
+                        <li class="tab red lighten-3"><a href="#Editar" class="black-text">Editar</a></li>
                     </ul>
                 </div>
-                <div class="card-content teal lighten-3">
+                <div class="card-content teal lighten-4">
                     <div id="Crear">
                         <div>
                             <h5>Padecimento</h5>
@@ -70,7 +70,7 @@
                             <div class="input-field">
                                 <textarea id="text_editor3" class="materialize-textarea white grey-text" placeholder="Ingrese otros"></textarea>
                             </div>
-                            <input type="Submit" value="Guardar" class="btn pink accent-2">
+                            <input type="Submit" value="Guardar" class="btn red lighten-3 black-text">
                         </div>
                      </div>
                     <div id="Editar">
