--- a/LogIn.html
+++ b/LogIn.html
@@ -40,7 +40,7 @@
         <div class="row">
             <h4 class="center">Log In Administrador</h4>
             <div class="col s12">
-                <div class="card pink lighten-4">
+                <div class="card teal lighten-4">
                     <div class="card-content">
                         <div class="input-field">
                             <input type="text" placeholder="Nombre" class="white grey-text">
@@ -48,7 +48,7 @@
                         <div class="input-field">
                             <input type="password" placeholder="Contraseña" class="white grey-text">
                         </div>
-                        <input type="Submit" value="Ingresar" class="btn pink accent-2">
+                        <input type="Submit" value="Ingresar" class="btn red lighten-3">
                     </div>
                 </div>
             </div>
