--- a/Principal.html
+++ b/Principal.html
@@ -108,7 +108,7 @@
         <h3 class="center white-text">¡Dejanos tu Comentario!</h3>
         <div class="row">
             <div class="col s12 m4 push-m1">
-                <div class="card-panel center pink lighten-4">
+                <div class="card-panel center teal lighten-4">
                     <i class="material-icons">email</i>
                     <h6>Si vez algo que podríamos mejorar, cambiar, o revisar, dejanos tu comentario!</h6>
                     <p>Siempre hay cosas para mejorar y cambiar, información que puede estar desactualizada, etc.
@@ -126,7 +126,7 @@
                 <div class="input-field">
                     <textarea class="materialize-textarea white grey-text" placeholder="Enter Mesage"></textarea>
                 </div>
-                <input type="Submit" value="Enviar" class="btn pink accent-2">
+                <input type="Submit" value="Enviar" class="btn red lighten-3 black-text">
             </div>
         </div>
     </div>
