--- a/Editor.html
+++ b/Editor.html
@@ -25,6 +25,7 @@
                     </a>
                     <ul class="right hide-on-med-and-down">
                         <li><a href="/Instrucciones.html">Instrucciones</a></li>
+                        <li><a href="/Comentarios.html">Comentarios</a></li>
                     </ul>
                 </div>
             </div>
@@ -32,6 +33,7 @@
     </div>
     <ul class="sidenav" id="mobile-nav">
         <li><a href="/Instrucciones.html">Instrucciones</a></li>
+        <li><a href="/Comentarios.html">Comentarios</a></li>
     </ul>
 
 <!--Editar/Crear-->
