--- a/Editor.html
+++ b/Editor.html
@@ -85,15 +85,15 @@
                             <div class="input-field">
                                 <input type="text" value="Palabras características del Padecimiento" class="white grey-text autocomplete">
                             </div>
-                            <h5><a href="/Revisar.html">Síntomas</a></h5>
+                            <h5><a href="/RevisarSint.html">Síntomas</a></h5>
                             <div class="input-field">
                                 <textarea id="text_editor4" class="materialize-textarea white grey-text" aria-valuetext="Ingrese los síntomas"></textarea>
                             </div>
-                            <h5><a href="/Revisar.html">Ejercicios</a></h5>
+                            <h5><a href="/RevisarEj.html">Ejercicios</a></h5>
                             <div class="input-field">
                                 <textarea id="text_editor5" class="materialize-textarea white grey-text" value="Ingrese los ejercicios"></textarea>
                             </div>
-                            <h5><a href="/Revisar.html">Otros</a></h5>
+                            <h5><a href="/RevisarOt.html">Otros</a></h5>
                             <div class="input-field">
                                 <textarea id="text_editor6" class="materialize-textarea white grey-text" value="Ingrese otros siubissiudvIuabsdVO UAWBDVO9U"></textarea>
                             </div>
