--- a/Instrucciones.html
+++ b/Instrucciones.html
@@ -45,14 +45,17 @@
         <div class="rows">
             <div class="col s12">
                 <h5 class="text center">ESTE ES EL PROTOCOLO PARA SUBIR ARTÍCULOS DE LAS CATEGORÍAS “SÍNTOMAS”, “EJERCICIOS” Y “OTROS”.</h5>
-            <p>El archivo debe ser guardado como .html. Por ejemplo: sintomas.html<br>
-                La letra debe estar en tamaño ___.<br>
-                La letra debe ser de color negro (#0000).<br>
-                Se recomienda mantener una copia de la información de los padecimientos en un documento/carpeta en el ordenador como backup.</p>
+            <br>
+                <h5>El archivo debe ser guardado como .html. Por ejemplo: sintomas.html<br><br>
+                La letra debe estar en tamaño ___.<br><br>
+                La letra debe ser de color negro (#0000).<br><br>
+                Se recomienda mantener una copia de la información de los padecimientos en un documento/carpeta en el ordenador como backup.</h5>
             </div>
         </div>    
     </div>
 </section>
+<br>
+<br>
 
 <!--Footer-->
 <footer class="section teal darken-2 white-text">
