--- a/Instrucciones.html
+++ b/Instrucciones.html
@@ -58,7 +58,7 @@
 <br>
 
 <!--Footer-->
-<footer class="section teal darken-2 white-text">
+<footer class="section teal lighten-3 white-text">
 <div class="row">
     <div class="col s8 l4">
         <h6>NOMBRE</h6>
