--- a/html/Articulo.html
+++ b/html/Articulo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administrador</title>
+    <title>Artículo</title>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -28,25 +28,48 @@
                         <i class="material-icons">menu</i>
                     </a>
                     <ul class="right hide-on-med-and-down">
-                        <li><a href="/Instrucciones.html">Instrucciones</a></li>
+                        <li><a href="../html/Principal.html">Volver a la Página Principal</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </div>
     <ul class="sidenav" id="mobile-nav">
-        <li><a href="/Instrucciones.html">Instrucciones</a></li>
+        <li><a href="../html/Principal.html">Volver a la Página Principal</a></li>
     </ul>
 
-<!--Editar/Crear-->
-<section id="administrar" class="section section-administrar">
+<!--Artículo-->
+<section id="articulo" class="section section-articulo">
     <div class="container">
-        <h2 class="text center">Administrador</h2>
-        <h4 class="text center"><span>Síntomas del Padecimiento</span></h4>
+        <h2 class="text center">Nombre Padecimiento</h2>
         <br>
         <div class="col s12">
-            <p>Estos son los síntomas aaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
-        </div>      
+            <div class="card flow-text">
+                <div class="card-tabs">
+                    <ul class="tabs tabs-fixed-width">
+                        <li class="tab red lighten-3" ><a href="#Sintomas" class="black-text">Síntomas</a></li>
+                        <li class="tab red lighten-3"><a href="#Ejercicios" class="black-text">Ejercicios</a></li>
+                        <li class="tab red lighten-3"><a href="#Otros" class="black-text">Otros</a></li>
+                    </ul>
+                    <!--active es el que se va a ver al principio. Si no se pone un active, por default el primero va a ser el que se vea-->
+                </div>
+                <div class="card-content teal lighten-4">
+                    <div id="Sintomas">
+                        Síntomas
+                        <p id="S">Sintomaskfnaepbnpr Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur deleniti repellendus laboriosam ratione molestias sint voluptatem porro quaerat et expedita adipisci asperiores iure rem doloremque dolores a, ad consequuntur quibusdam fugiat fugit eaque blanditiis! Architecto harum ut quaerat iure dolorem.
+                        </p>
+                     </div>
+                    <div id="Ejercicios">
+                        Ejercicios
+                        <p id="E">Ejerciciosdsdfvknabepn Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt dolor tenetur corrupti beatae similique eos praesentium facilis itaque, voluptatum veniam illo. Quis aut quidem repudiandae impedit natus saepe expedita, sapiente eaque mollitia maiores, vel quos nulla qui odit possimus perferendis!</p>
+                    </div>
+                    <div id="Otros">
+                        Otros
+                        <p id="O">dkvanpvka Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat, fugit delectus necessitatibus, libero pariatur sunt sapiente perspiciatis totam expedita eos numquam accusamus architecto iure nam, asperiores sit magnam minima placeat natus illo blanditiis itaque. Expedita blanditiis provident rem eos harum!</p>
+                    </div>
+                </div>
+            </div>
+        </div> 
     </div>
 </section>
 
@@ -102,6 +125,14 @@
         document.addEventListener('DOMContentLoaded', function() {
             M.AutoInit();
         })
+    </script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+        var elems = document.querySelectorAll('.carousel');
+        var instances = M.Carousel.init(elems,{
+            indicators: true
+        });
+        });
     </script>
 </body>
 
