--- a/html/Comentarios.html
+++ b/html/Comentarios.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log In Admin</title>
+    <title>Administrador</title>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -13,6 +14,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+<!--
+    TENGO QUE ARREGLAS LAS H1-6 PARA QUE TENGAN EL TAMAÑO CORRECTO, Y CAMBIARLES
+    EL PADDING PARA QUE NO ESTÉN TAN SEPARADOS LOS TEXTOS ENTRE SÍ. 
+-->
 <body id="inicio">
     <!--NavBar-->
     <div class="navbar-fixed">
@@ -24,40 +29,39 @@
                         <i class="material-icons">menu</i>
                     </a>
                     <ul class="right hide-on-med-and-down">
-                        <li><a href="/Principal.html">Volver al Inicio</a></li>
+                        <li><a href="../html/Editor.html">Volver a Admin</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </div>
     <ul class="sidenav" id="mobile-nav">
-        <li><a href="/Principal.html">Volver al Inicio</a></li>
+        <li><a href="../html/Editor.html">Volver a Admin</a></li>
     </ul>
 
-<!--Log in Form-->
-<section id="login" class="section section-login">
+<!--Ver Mensajes-->
+<section id="comentarios" class="section section-comentarios">
     <div class="container">
-        <div class="row">
-            <h4 class="center">Log In Administrador</h4>
+        <h3 class="text center">Comentarios</h3>
+        <div class="rows">
             <div class="col s12">
-                <div class="card teal lighten-4">
-                    <div class="card-content">
-                        <div class="input-field">
-                            <input type="text" placeholder="Nombre" class="white grey-text">
-                        </div>
-                        <div class="input-field">
-                            <input type="password" placeholder="Contraseña" class="white grey-text">
-                        </div>
-                        <input type="Submit" value="Ingresar" class="btn red lighten-3">
-                    </div>
-                </div>
+                <table class="center striped" id="dbcomentario">
+                    <thead>
+                        <th>Nombre</th>
+                        <th>Mail</th>
+                        <th>Comentario</th>
+                    </thead>
+                    <tbody>
+                        <script src="../php/TablaComentarios.php"></script>
+                    </tbody>
+                </table>
             </div>
-        </div>
+        </div>    
     </div>
 </section>
 
 <!--Footer-->
-<footer class="section teal darken-2 white-text">
+<footer class="section teal lighten-3 white-text">
 <div class="row">
     <div class="col s8 l4">
         <h6>NOMBRE</h6>
@@ -86,16 +90,6 @@
             transition: 500,
             interval: 6000
         });
-        //autocomplete
-        const ac = document.querySelector('.autocomplete');
-        M.Autocomplete.init(ac,{
-            data: {
-                "Depresión": null,
-                "Ansiedad": null,
-                "Anorexia": null,
-                "Bipolar": null,
-                "TDAH": null,
-            }});
         //material boxed
         const mb = document.querySelector('.materialboxed');
         M.Materialboxed.init(mb, {});
