--- a/html/ViewContent.html
+++ b/html/ViewContent.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administrador</title>
+    <title>Artículo</title>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -24,34 +24,51 @@
             <div class="container">
                 <div class="nav-wrapper">
                     <a href="#" class="brand-logo">NOMBRE</a>
-                    <a href="" data-target="mobile-nav" class="sidenav-trigger">
-                        <i class="material-icons">menu</i>
-                    </a>
-                    <ul class="right hide-on-med-and-down">
-                        <li><a href="/Instrucciones.html">Instrucciones</a></li>
-                    </ul>
                 </div>
             </div>
         </nav>
     </div>
-    <ul class="sidenav" id="mobile-nav">
-        <li><a href="/Instrucciones.html">Instrucciones</a></li>
-    </ul>
 
-<!--Editar/Crear-->
-<section id="administrar" class="section section-administrar">
+<!--Artículo-->
+<section id="articulo" class="section section-articulo">
     <div class="container">
-        <h2 class="text center">Administrador</h2>
-        <h4 class="text center"><span>Síntomas del Padecimiento</span></h4>
+        <h2 class="text center">Nombre Padecimiento</h2>
         <br>
         <div class="col s12">
-            <p>Estos son los síntomas aaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
-        </div>      
+            <div class="card flow-text">
+                <div class="card-tabs">
+                    <ul class="tabs tabs-fixed-width">
+                        <li class="tab red lighten-3" ><a href="#Sintomas" class="black-text">Síntomas</a></li>
+                        <li class="tab red lighten-3"><a href="#Ejercicios" class="black-text">Ejercicios</a></li>
+                        <li class="tab red lighten-3"><a href="#Otros" class="black-text">Otros</a></li>
+                    </ul>
+                    <!--active es el que se va a ver al principio. Si no se pone un active, por default el primero va a ser el que se vea-->
+                </div>
+                <div class="card-content teal lighten-4">
+                    <div id="Sintomas">
+                        Síntomas
+                        <p name="Sin" id="S">
+
+                        </p>
+                     </div>
+                    <div name="Eje" id="Ejercicios">
+                        Ejercicios
+                        <p id="E">
+                            
+                        </div>
+                    <div name="Otr" id="Otros">
+                        Otros
+                        <p id="O">
+                            
+                        </div>
+                </div>
+            </div>
+        </div> 
     </div>
 </section>
 
 <!--Footer-->
-<footer class="section teal darken-2 white-text">
+<footer class="section teal lighten-3 white-text">
 <div class="row">
     <div class="col s8 l4">
         <h6>NOMBRE</h6>
@@ -102,6 +119,14 @@
         document.addEventListener('DOMContentLoaded', function() {
             M.AutoInit();
         })
+    </script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+        var elems = document.querySelectorAll('.carousel');
+        var instances = M.Carousel.init(elems,{
+            indicators: true
+        });
+        });
     </script>
 </body>
 
