--- a/html/Editor.html
+++ b/html/Editor.html
@@ -83,7 +83,7 @@
                         <from action="../php/editar.php" method="POST">
                             <h5>Nombre Padecimento</h5>
                             <div class="input-field">
-                                <input id="buscnom" type="text" placeholder="Nombre del Padecimiento" class="white grey-text autocomplete">
+                                <input id="nomedit" type="text" placeholder="Nombre del Padecimiento" class="white grey-text autocomplete">
                             </div>
                             <h5>Características</h5>
                             <div class="input-field">
@@ -91,15 +91,15 @@
                             </div>
                             <h5><a target="_blank" href="../html/ViewContent.html">Síntomas</a></h5>
                             <div class="input-field">
-                                <textarea id="text_editor4" class="materialize-textarea white grey-text" aria-valuetext="Ingrese los síntomas"></textarea>
+                                <textarea id="SintTxt" class="materialize-textarea white grey-text" aria-valuetext="Ingrese los síntomas"></textarea>
                             </div>
                             <h5><a target="_blank" href="../html/ViewContent.html">Ejercicios</a></h5>
                             <div class="input-field">
-                                <textarea id="text_editor5" class="materialize-textarea white grey-text" value="Ingrese los ejercicios"></textarea>
+                                <textarea id="EjerTxt" class="materialize-textarea white grey-text" value="Ingrese los ejercicios"></textarea>
                             </div>
                             <h5><a target="_blank" href="../html/ViewContent.html">Otros</a></h5>
                             <div class="input-field">
-                                <textarea id="text_editor6" class="materialize-textarea white grey-text" value="Ingrese otros siubissiudvIuabsdVO UAWBDVO9U"></textarea>
+                                <textarea id="OtroTxt" class="materialize-textarea white grey-text" value="Ingrese otros siubissiudvIuabsdVO UAWBDVO9U"></textarea>
                             </div>
                             <input type="Submit" value="Guardar" class="btn pink accent-2">
                         </form>
