--- a/html/ImgTerap.html
+++ b/html/ImgTerap.html
@@ -47,10 +47,13 @@
                 <div class="card">
                     <div class="card-content">
                         <h5>¿Qué son?</h5>
-                        <h6>Las imágenes terapéuticas son ...</h6>
+                        <h6>Las imágenes terapéuticas son recursos que percibimos mediante uno a más sentidos, que gracias a la guianza de un profecional, nos ayudan a comprender mejor nuestros sentimientos y emociones, a relajarnos, y a expresarnos de forma libre. UNa imágen terapéutica puede ser una foto, un sonido, un video, etc.
+                            <br>Una rama más conocida de las terapia con imágenes es la fotografía terapéutica, que se trata de sacar fotos para expresarnos, y luego analizar el porqué nos hace sentir o pensar de cierta forma.
+                        </h6>
                         <h5>¿Cómo funciona?</h5>
-                        <h6>Primero ....</h6>
+                        <h6>Primero se busca una imágen, puede ser sonora, viusual, táctil, etc. Luego se toma un tiempo para percibir esta imágen, inspeccionarla y procesarla. Finalmente, se reflecciona sobre el impacto que nos provoca, por qué y cómo nos afecta. Esta última etapa suele ser efectiva con guianza de un profecional con quien compartir estos sentimientos. A continuación les dejamos un cuestionario para guiarse en esta última etapa. Si se quiere trabajar con ello en forma de terapia, lo ideal sería compartir las respuestas con un profecional de la salud mental (pricólogo, psiquiatra, etc).</h6>
                         <h5><a href="http://">Link</a> a página con imágenes para usar</h5>
+                        <h5><a href="http://">Link</a> a cuestionario</h5>
                     </div>
                 </div>
             </div>       
