--- a/html/ImgTerap.html
+++ b/html/ImgTerap.html
@@ -52,8 +52,8 @@
                         </h6>
                         <h5>¿Cómo funciona?</h5>
                         <h6>Primero se busca una imágen, puede ser sonora, viusual, táctil, etc. Luego se toma un tiempo para percibir esta imágen, inspeccionarla y procesarla. Finalmente, se reflecciona sobre el impacto que nos provoca, por qué y cómo nos afecta. Esta última etapa suele ser efectiva con guianza de un profecional con quien compartir estos sentimientos. A continuación les dejamos un cuestionario para guiarse en esta última etapa. Si se quiere trabajar con ello en forma de terapia, lo ideal sería compartir las respuestas con un profecional de la salud mental (pricólogo, psiquiatra, etc).</h6>
-                        <h5><a href="http://">Link</a> a página con imágenes para usar</h5>
-                        <h5><a href="http://">Link</a> a cuestionario</h5>
+                        <h5><a href="https://www.bing.com/images/details/%7B0%7D">Binge Fotos</a> es una de las página con imágenes visuales que poder usar buscar fotos</h5>
+                        <h5><a href="http://">Link</a> al cuestionario</h5>
                     </div>
                 </div>
             </div>       
